--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,22 @@ code {
 /* Idea */
 .idea {
   background-color: #ececec;
+  min-width: 200px;
   border-radius: 4px;
   display: grid;
   min-height: 110px;
   grid-template-columns: 1fr auto;
   align-items: center;
+}
+
+.app__columns {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
+
+.app__column {
+  display: flex;
+  flex-direction: column;
 }
